# cpudata

./: cpudata.py  main.py  pyproject.toml
.github/workflows/: daily.yml
docs/: data.json  history.json  index.html
